projet_gl/src/test/deca/lexer/valid/string.deca
// Description:
//    test lexer for string.
//
// Resultats:
//    STRING: [@0,113:131='"this is a string."',<46>,10:0]
//
// Historique:
//    cree le 10/01/2024

"this is a string."