projet_gl/src/test/deca/lexer/invalid/incorrectSeparator.deca
// Description:
//    test lexer invalid for separators.
//
// Resultats:
//    line=10 token recognition error at: '"this is an incorrect separator: \a'
//
// Historique:
//    cree le 10/01/2024

"this is an incorrect separator: \a"